# python-gof-design-patterns

./: .gitignore  pyproject.toml  readme.md
patterns/creational/: __init__.py  builder.py  factory.py  singleton.py
patterns/structural/: adapter.py  decorator.py  facade.py
tests/test_behavioral/: test_builder.py  test_factory.py  test_singleton.py
tests/test_structual/: test_adapter.py  test_decorator.py  test_facade.py
